--- a/ADAppDemo.plist
+++ b/ADAppDemo.plist
@@ -11,23 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://www.hahaha.com/apps/ADAppDemo.ipa</string>
-                    </dict>
-                    <dict>
-                        <key>kind</key>
-                        <string>full-size-image</string>
-                        <key>needs-shine</key>
-                        <true/>
-                        <key>url</key>
-                        <string>http://xxxxxxxxxxxxxxxxxx.png</string>
-                    </dict>
-                    <dict>
-                        <key>kind</key>
-                        <string>display-image</string>
-                        <key>needs-shine</key>
-                        <true/>
-                        <key>url</key>
-                        <string>http://xxxxxxxxxxxxxxxxxx.png</string>
+                        <string>http://storage.jd.local/ibiu.server.jd.com/c29b32_2019-01-24-15-15-30_EAApp_Release.ipa?Expires=1568877945&AccessKey=uYjXidC1DH4WRKuW&Signature=eHNwNNO1jZM4B%2FPftmyxxcqFigc%3D</string>
                     </dict>
                 </array>
                 <key>metadata</key>
