--- a/ADAppDemo.plist
+++ b/ADAppDemo.plist
@@ -11,19 +11,19 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>http://storage.jd.local/ibiu.server.jd.com/c29b32_2019-01-24-15-15-30_EAApp_Release.ipa?Expires=1568877945&AccessKey=uYjXidC1DH4WRKuW&Signature=eHNwNNO1jZM4B%2FPftmyxxcqFigc%3D</string>
+                        <string>https://pan.baidu.com/s/1oKhmECoUyZdKbrzTfuI9bw</string>
                     </dict>
                 </array>
                 <key>metadata</key>
                 <dict>
                     <key>bundle-identifier</key>
-                    <string>com.ADAppDemo.demo</string>
+                    <string>com.jd.keplerdemo</string>
                     <key>bundle-version</key>
                     <string>1.0.0</string>
                     <key>kind</key>
                     <string>software</string>
                     <key>title</key>
-                    <string>XXXX App download</string>
+                    <string>企业版 App download</string>
                 </dict>
             </dict>
         </array>
